feat: sync platform feature implementation
